# Notrus

./: .gitignore  ABUSE_MODEL.md  ADMIN_GUI.md  ALPHA_RELEASE_NOTES.md  ATTESTATION_SETUP.md  BETA_RELEASE_CHECKLIST.md  CODEOWNERS  CRASH_REDACTION.md  CRYPTO_SPEC.md  DEVICE_MODEL.md  DISCLAIMER.md  EXTERNAL_AUDIT.md  HOW_TO_USE.md  INTEGRITY_POLICY.md  KEY_LIFECYCLE.md  LEGAL.md  METADATA_POLICY.md  OBSERVABILITY.md  PLATFORM_BOUNDARIES.md  PRODUCTION_API_BOUNDARY.md  PROTOCOL_MIGRATION.md  PUSH_POLICY.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SECURITY_CHECKLIST.md  SECURITY_RELEASE.md  SECURITY_SCANNER_STATUS.md  STABLE_RELEASE_CHECKLIST.md  THREAT_MODEL.md  attestation.js  package-lock.json  package.json  protocol-policy.js  server.js  sonar-project.properties  witness.js
.github/: dependabot.yml
admin/: app.js  index.html  styles.css
docs/: STABLE_POLISH_GATE.md
native/protocol-core/: Cargo.toml  README.md
native/protocol-core/include/: notrus_protocol_core.h
native/protocol-core/src/: bridge.rs  lib.rs  main.rs
native/protocol-core/test-vectors/: mls-group-v1.json  signal-direct-v1.json
scripts/: build-android-app.sh  build-mac-app.sh  build-protocol-core.sh  check-relay-register.mjs  generate-crypto-vectors.mjs  generate-sbom.mjs  managed-relay.mjs  notarize-mac-app.sh  package-android-app.sh  package-mac-app.sh  render-mac-icon.swift  scan-secrets.mjs  start-mac-app.sh  start-notrus-stack.sh  swift-env.sh  test-abuse-controls.mjs  test-adversarial-inputs.mjs  test-attestation-enforcement.mjs  test-attestation-service.mjs  (+19 more)
(+112 files in other folders)
