[package]
name = "notrus-protocol-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "notrus_protocol_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "notrus-protocol-core"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", rev = "8418be45dba3ebc17127b5c6b76ce02886350524", package = "libsignal-protocol" }
openmls = { version = "=0.8.1", features = ["openmls_rust_crypto"] }
openmls_basic_credential = "=0.5.0"
openmls_rust_crypto = "=0.5.1"
rand = "0.10"
rand_core = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
